--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.5.9",
     "multer": "^1.4.1",
     "nodemailer": "^6.1.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "pdfkit": "^0.9.1"
   }
 }
