--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "author": "santhu",
   "license": "ISC",
   "dependencies": {
+    "angular2-useful-swiper": "^5.0.1",
+    "angular4-carousel": "^3.1.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
-    "mongoose": "^5.5.14",
+    "mongoose": "^5.6.0",
     "multer": "^1.4.1",
+    "ng-simple-slideshow": "^1.2.9",
     "nodemailer": "^6.2.1",
     "nodemon": "^1.19.1",
     "pdfkit": "^0.9.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "swiper": "^4.5.0"
   }
 }
