--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.6.9",
+    "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "ng2-pdf-viewer": "^5.3.2",
+    "ngx-owl-carousel-o": "^1.1.5",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
