--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular2-useful-swiper": "^5.0.1",
     "angular4-carousel": "^3.1.8",
+    "animate.css": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
